docs/index.css
body{
	background-color:white;
	width: 95%;
}
nav{
	background-color: red;
	width: 90%;
	text-align:center;
}
#navbar a {
	display: inline-block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	border:5px groove black;
  }
  #navbar a:hover{
	  color:yellow;
  }
  #navbar a:visited{
	  color:blue;
  }
header{
	border: 5px groove red;
	background-color:white;
}
#titleimg{
	width:60%;
	object-fit: contain;
	padding-left: 20%;
}
#filler{
	border: 4px ridge #FF0012;
	padding-right:5px;
}
#sprinter{
	width: 90%;
	height:90%;
	object-fit:contain;
}
#description{
	border: 4px ridge #FF0012;
	padding-right:15px;
	font-size: large;
}
#map{
	border: 4px ridge #FF0012;
	padding-right:15px;
	font-size: large;
}
h2{
	text-decoration: underline black;
}
iframe{
	padding-left:25%;
}
footer{
    bottom: 0;
    left: 0;
    right: 0;
    background: #333;
    height: auto;
    width: 100vw;
    padding-top: 40px;
    color: #fff;
}
#dkoffice{
	display: inline;
	object-fit: contain;
}
#imap{
	display: inline;
	width:100%;
	height:65%;
	padding-left: 10px;
	border:0px;
}
#qform{
	border: 4px ridge #FF0012;
	padding-right:15px;
	font-size: large;
	text-align: center;
}
.footerbox{
	display: inline-block;
	padding-left: 15px;
}
#btmlink{
	position: fixed;
	bottom: 10px;
	float: right;
	right: 18.5%;
	left: 77.25%;
	max-width: 30px;
	width: 100%;
	font-size: 16px;
	border-color: red;
	background-color: white;
	padding: .5px;
	border-radius: 4px;
}
@media screen and (min-width: 600px){
	body{
		width:90%;
	}
	footer{
		width:90%;
	}
}

